2001-08-11  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h: 2.4.8 doesn't either. *sigh*. looks like we need
	  some autoconfery :(
 
2001-08-11  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h: 2.4.7-linus doesn't include the Andrew Morton
	  complete_and_exit(). Hopefully this will make it into 2.4.8,
	  I'm banking on this.

2001-08-11  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_dump:
	* doc/oprofile.sgml:
	* dae/Makefile.in: a little utility for dumping

2001-08-11  Dave Jones  <davej@suse.de>

	* oprofile.h:
	* oprofile.c: back-compat code and use of new struct completion
	  for the thread

2001-08-11  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: corner case where an a miss against a full count,
	  we were attributing wrong (reported by Bob Montgomery)

2001-08-11  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: use a simple cli/sti when installing the NMI
	  handler. It should work and avoids the unmasking problem.

2001-08-10  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.h: fix header include (from Dave Jones)

	* op_syscalls.c:
	* oprofile.c: fix undefined symbol (from Dave Jones)

2001-08-10  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: small tidy in apic setup
 
2001-08-02  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: fix mod unload race, small fixes
 
	* dae/op_start: make sysctl error actually appear
 
	* doc/oprofile.sgml: document need for modutils 2.4.6

	* op_syscalls.c: fix stupid mod use count problem
 
2001-07-28  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: d'oh, fat-fingered a slow memleak in the
	  a-ksymoops modules fix
 
2001-07-27  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprof_convert.c: fix bug when conversion skip more than one
	  version.

2001-07-27  John Levon  <moz@compsoc.man.ac.uk>

	* doc/Makefile.in: ln -s -> ln -sf

	* dae/opd_util.c: actually include the right header
 
	* dae/opd_util.h: compile freestanding from oprofiled.h
